...
            android:layout_height="58dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="30dp"
            android:backgroundTint="#FFFFFF"
            android:contentDescription="@string/boton_google_descripcion"
            android:src="@drawable/logo_google"
            app:layout_constraintBottom_toTopOf="@+id/botonRegistrarse"
            app:layout_constraintEnd_toStartOf="@+id/botonFacebook"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
...
